--- a/src/pages/SelectLevelPage/SelectLevelPage.module.css
+++ b/src/pages/SelectLevelPage/SelectLevelPage.module.css
@@ -62,6 +62,7 @@
 .levelLink:visited {
   color: #0080c1;
 }
+
 .subtitle {
   color: #004980;
   text-align: center;
@@ -76,4 +77,14 @@
 .wrap {
   display: flex;
   align-items: flex-end;
+}
+
+.link {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: left;
+  color: #004980;
+  margin-top: 18px;
 }
